# hpinfer

./: README.md
include/base/: alloc.h  alloc_factory.h  buffer.h  cuda_config.h
include/layer/: layer.h  tensor.h
include/op/: add.h  kernels.h  rmsnorm.h
src/: alloc.cpp  alloc_factory.cpp  buffer.cpp  layer.cpp  tensor.cpp
src/op/: rmsnorm.cu
src/op/cuda/: add_op.cu  add_op.cuh
test/: CMakeLists.txt  test_buffer.cpp
